--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@mdi/font": "^7.4.47",
+    "chart.js": "^4.4.7",
+    "pinia": "^2.3.1",
+    "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.7.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "sass": "^1.83.4",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue-tsc": "^2.2.0"
   }
 }
