--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuetify": "^3.7.9"
   },
   "devDependencies": {
+    "@types/node": "^22.13.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.83.4",
